--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "19.2.3",
     "react-hook-form": "^7.69.0",
     "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.4"
   },
@@ -37,6 +38,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/redux-persist": "^4.0.0",
     "babel-plugin-react-compiler": "1.0.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
